--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.3",
+    "com.unity.shadergraph": "7.5.3",
     "com.unity.textmeshpro": "2.1.3",
     "com.unity.timeline": "1.2.17",
     "com.unity.ugui": "1.0.0",
